Término dos Cards Filmes

--- a/public/filmes.html
+++ b/public/filmes.html
@@ -48,7 +48,7 @@
 
     <section>
 
-      <div class=card>
+      <div class=cardfilm>
         <img
           src="https://m.media-amazon.com/images/I/51c6S4kGFmL._SY346_.jpg">
   
@@ -63,7 +63,7 @@
       </div>
   
   
-      <div class=card>
+      <div class=cardfilm>
         <img
           src="https://m.media-amazon.com/images/I/51nwJJf3IjL._SY346_.jpg">
   
@@ -78,7 +78,7 @@
         </div>
       </div>
   
-      <div class=card>
+      <div class=cardfilm>
         <img
           src="https://m.media-amazon.com/images/I/51FFvV73KLL._SY346_.jpg">
   
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <div class=card>
+      <div class=cardfilm>
         <img
           src="https://m.media-amazon.com/images/I/51yHBMzxszL._AC_.jpg">
   
@@ -105,6 +105,36 @@
             <button>Ler mais...</button>
         </div>
       </div>
+
+      <div class=cardfilm>
+        <img
+          src="https://m.media-amazon.com/images/I/41nj25ZdUsL._SX378_BO1,204,203,200_.jpg">
+  
+        <div class="content">
+          <h4>Attack of the Clones</h4>
+          <p>Release Date 16/05/2002 </p>
+          <p>Episode: II </p>
+          <p>Diretor: George Lucas</p>
+  
+            <button>Ler mais...</button>
+        </div>
+      </div>
+
+      <div class=cardfilm>
+        <img
+          src="https://m.media-amazon.com/images/I/51E9TTSPP9L._AC_.jpg">
+  
+        <div class="content">
+          <h4>The Phantom Menace</h4>
+          <p>Release Date 19/05/2005 </p>
+          <p>Episode: III </p>
+          <p>Diretor: George Lucas</p>
+  
+            <button>Ler mais...</button>
+        </div>
+      </div>
+
+      
 
      
   
